--- a/Project 15.2/package.json
+++ b/Project 15.2/package.json
@@ -23,10 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@types/async-retry": "^1.4.8",
     "async-retry": "^1.3.3",
     "kafkajs": "^2.2.4",
+    "mongoose": "^8.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
